[gd_scene load_steps=14 format=3 uid="uid://dq07351a64tkg"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_h5tho"]
[ext_resource type="Script" path="res://Entities/Player/RightHand.gd" id="2_8n6x3"]
[ext_resource type="Script" path="res://Hurtbox.gd" id="4_6ois3"]
[ext_resource type="AudioStream" uid="uid://b6n3wlye5p51t" path="res://assets/Soundeffects/soft_punch3.wav" id="4_s0mfv"]
[ext_resource type="PackedScene" uid="uid://2unjh0lse0lx" path="res://Weapons/Pillow.tscn" id="4_sns0d"]
[ext_resource type="Script" path="res://UI/HUD/HUD.gd" id="5_fsitr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oxtg2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fcbgj"]

[sub_resource type="Animation" id="Animation_s3w6v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.15, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0174533, 0.1309, -0.122173)]
}

[sub_resource type="Animation" id="Animation_4alff"]
resource_name = "punch"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.5),
"transitions": PackedFloat32Array(2.07053, 0.5, 4, 2.07053),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.25, 0.4, 0.2), Vector3(-0.35, 0, -0.5), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 4, 1),
"update": 0,
"values": [Vector3(-0.174533, 0.0872665, -0.0872665), Vector3(0.523599, 0.1309, -0.174533), Vector3(-1.48353, 0.261799, 0), Vector3(-0.174533, 0.0872665, -0.0872665)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.35),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_weapon_active"
}, {
"args": [false],
"method": &"set_weapon_active"
}]
}

[sub_resource type="Animation" id="Animation_n1mmh"]
resource_name = "punch_2"
length = 0.5
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.19, 0.35, 0.5),
"transitions": PackedFloat32Array(2.07053, 0.5, 0.297302, 1.07177, 1),
"update": 0,
"values": [Vector3(0.15, 0, 0), Vector3(0.25, 0.375, 0.2), Vector3(0.25, 0.375, 0.2), Vector3(-0.35, -0.1, -0.5), Vector3(0.15, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.175, 0.19, 0.35, 0.5),
"transitions": PackedFloat32Array(1.46409, 0.5, 0.307786, 1.18921, 1),
"update": 0,
"values": [Vector3(0.0174533, 0.1309, -0.122173), Vector3(0.632609, 0.424634, -0.396156), Vector3(0.632609, 0.424634, -0.396156), Vector3(-1.0981, 1.71522, -1.23942), Vector3(0.0174533, 0.1309, -0.122173)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.35),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_weapon_active"
}, {
"args": [false],
"method": &"set_weapon_active"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cf8gk"]
_data = {
"RESET": SubResource("Animation_s3w6v"),
"punch": SubResource("Animation_4alff"),
"punch_2": SubResource("Animation_n1mmh")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fa568"]
bg_color = Color(0.701961, 0.027451, 0.027451, 1)
border_width_right = 8
border_color = Color(0.341176, 0, 0.00392157, 1)
border_blend = true
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_h5tho")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645782, 0)
current = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_oxtg2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_fcbgj")

[node name="Hands" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646, 0)

[node name="RightHand" type="Marker3D" parent="Hands"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.483438, -0.42502, -0.664507)
script = ExtResource("2_8n6x3")
metadata/_edit_group_ = true

[node name="ItemContainer" type="Node3D" parent="Hands/RightHand"]
transform = Transform3D(0.983778, 0.123088, 0.130507, -0.121851, 0.992395, -0.0174524, -0.131662, 0.00126696, 0.991294, 0.15, 0, 0)

[node name="Pillow" parent="Hands/RightHand/ItemContainer" instance=ExtResource("4_sns0d")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.12, 0, -0.13)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hands/RightHand"]
libraries = {
"": SubResource("AnimationLibrary_cf8gk")
}

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource("4_6ois3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_oxtg2")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_fsitr")

[node name="MarginContainer2" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="HUD/MarginContainer2"]
custom_minimum_size = Vector2(400, 35)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_fa568")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="DeathLabel" type="Label" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 65
text = "You died..."

[connection signal="health_changed" from="." to="HUD" method="update_health_display"]

[node name="pillow_punch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_s0mfv")
volume_db = -8.0
pitch_scale = 1.02
